--- a/ja/Days/Configmgmt/ansible-scenario1/templates/playbook1.yml
+++ b/ja/Days/Configmgmt/ansible-scenario1/templates/playbook1.yml
@@ -34,3 +34,15 @@
       service:
         name: apache2
         state: restarted
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: flagger-prometheus
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: flagger-prometheus
+subjects:
+- kind: ServiceAccount
+  name: flagger-prometheus
+  namespace: flagger-system
